dvg-poc/deployment-elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  labels:
    app: elasticsearch
    app.kubernetes.io/instance: dvg-poc
  name: elasticsearch
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: discovery.type
              value: single-node
            - name: ELASTIC_PASSWORD
              value: HCmxAYfGZKcyTRv2
          image: 'elasticsearch:8.6.0'
          imagePullPolicy: IfNotPresent
          name: elasticsearch
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 9200
              protocol: TCP
            - containerPort: 9300
              protocol: TCP
          resources:
            limits:
              cpu: 750m
              memory: 2Gi
            requests:
              cpu: 50m
              memory: 1536Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              mountPropagation: None
              name: elastic-files
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: elastic-files
          persistentVolumeClaim:
            claimName: efs-claim-elasticsearch
