dvg-poc/deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '2'
  labels:
    app: mysql
    app.kubernetes.io/instance: dvg-poc
  name: mysql
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - '--skip-log-bin'
          image: 'mysql:8.0.30-debian'
          imagePullPolicy: IfNotPresent
          name: mysql
          ports:
            - containerPort: 3306
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 1536Mi
            requests:
              cpu: 200m
              memory: 1Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/lib/mysql
              mountPropagation: None
              name: mysql-files
            - mountPath: /etc/mysql/conf.d/dvg.cnf
              mountPropagation: None
              name: mysql-settings
              subPath: settings
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: mysql-files
          persistentVolumeClaim:
            claimName: efs-claim-mysql
        - configMap:
            defaultMode: 420
            name: mysql-settings
            optional: false
          name: mysql-settings
