dvg-poc/service-dvg-poc-apache.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: dvg-poc
  name: dvg-poc-apache
  namespace: default
spec:
  clusterIP: 172.20.73.222
  clusterIPs:
    - 172.20.73.222
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - nodePort: 31418
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: dvg-poc-apache
  sessionAffinity: None
  type: NodePort
