dvg-poc/service-elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: dvg-poc
  name: elasticsearch
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: elastic-api
      port: 9200
      protocol: TCP
      targetPort: 9200
    - name: elastic-communication
      port: 9300
      protocol: TCP
      targetPort: 9300
  selector:
    app: elasticsearch
  sessionAffinity: None
  type: ClusterIP
