dvg-poc/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: dvg-poc
  name: mysql
  namespace: default
spec:
  clusterIP: 172.20.139.79
  clusterIPs:
    - 172.20.139.79
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: mysql
  sessionAffinity: None
  type: ClusterIP
