dvg-poc/ingress-dvg-poc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-keepalive-timeout: "600"
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/satisfy: any
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: 83.217.69.230/24
  generation: 1
  name: dvg-poc-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: dvg-poc.hosted-temp.com
    http:
      paths:
      - backend:
          service:
            name: dvg-poc-apache
            port:
              number: 80
        path: /
        pathType: Prefix
